--- a/style.scss
+++ b/style.scss
@@ -108,7 +108,9 @@ ul {
 
 .button {
   padding: 8px 16px !important;
-  outline: 1px solid #525252;
+  // outline: 1px solid #525252;
+  font-weight: normal;
+  font-family: "Abhaya";
   color: #212121;
 }
 
