--- a/css/style.css
+++ b/css/style.css
@@ -50,6 +50,7 @@ header nav a {
 }
 header nav .sub-link:hover .content {
   display: flex;
+  cursor: pointer;
 }
 header nav .sub {
   align-items: center;
@@ -72,8 +73,8 @@ header nav .sub .content a {
   font-style: italic;
 }
 header nav .sub .content a:hover {
-  background-color: #212121;
-  color: white;
+  text-decoration: underline;
+  text-decoration-thickness: 2px;
 }
 
 #header-bottom {
@@ -178,6 +179,7 @@ header nav .sub .content a:hover {
 }
 #about h3:hover::before {
   transform: scale(1.02);
+  color: #AF8738;
 }
 #about .btn-container {
   width: 100%;
@@ -189,7 +191,7 @@ header nav .sub .content a:hover {
   transition: all 0.2s ease-in-out;
 }
 #about .btn-container .button:hover {
-  background-color: #212121;
+  background-color: #323232;
   color: white;
 }
 #about .container {
@@ -249,6 +251,11 @@ header nav .sub .content a:hover {
   #about h3::before {
     content: "→Découvrez mon histoire←";
   }
+  #about img {
+    -o-object-fit: contain;
+       object-fit: contain;
+    width: 80vw;
+  }
   #about .container {
     flex-direction: column !important;
     align-items: center;
@@ -257,6 +264,8 @@ header nav .sub .content a:hover {
   #about .btn-container {
     padding: 40px 0 !important;
     padding-top: 0 !important;
+    flex-direction: row;
+    flex-wrap: wrap;
   }
   #about .button {
     margin: 0 !important;
@@ -518,7 +527,7 @@ ul {
   bottom: 0;
   width: 100%;
   height: 3px;
-  background-color: #323232;
+  background-color: #000;
   transform-origin: 100% 0;
   transform: scaleX(0);
   transition: opacity 0.4s ease-in-out, transform 0.4s ease;
@@ -546,6 +555,48 @@ ul {
   color: #212121;
 }
 
+.slider {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 999999;
+  width: 100%;
+  height: 100vh;
+  background-color: #000;
+  -webkit-animation: slide 1.5s;
+          animation: slide 1.5s;
+  -webkit-animation-delay: 2s;
+          animation-delay: 2s;
+  -webkit-animation-fill-mode: forwards;
+          animation-fill-mode: forwards;
+  opacity: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.slider img:nth-child(1) {
+  width: 500px !important;
+}
+.slider img:nth-child(2) {
+  width: 80px;
+  margin-left: 60px;
+}
+
+@-webkit-keyframes slide {
+  to {
+    pointer-events: none;
+    opacity: 0;
+  }
+}
+
+@keyframes slide {
+  to {
+    pointer-events: none;
+    opacity: 0;
+  }
+}
 #scroll-back {
   display: none;
   padding: 20px;
@@ -621,6 +672,16 @@ main {
 @media only screen and (max-width: 1900px) {
   body {
     overflow-x: hidden !important;
+  }
+  .slider {
+    flex-direction: row !important;
+  }
+  .slider img:nth-child(1) {
+    width: 200px !important;
+  }
+  .slider img:nth-child(2) {
+    width: 30px !important;
+    margin-left: 12px !important;
   }
   .row {
     flex-direction: column;
