--- a/style.scss
+++ b/style.scss
@@ -86,7 +86,7 @@ ul {
   bottom: 0;
   width: 100%;
   height: 3px;
-  background-color: #323232;
+  background-color: #000;
   transform-origin: 100% 0;
   transform: scaleX(0);
   transition: opacity .4s ease-in-out, transform .4s ease;
@@ -112,6 +112,41 @@ ul {
   font-weight: normal;
   font-family: "Abhaya";
   color: #212121;
+}
+
+.slider {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 999999;
+  width: 100%;
+  height: 100vh;
+  background-color: #000;
+  animation: slide 1.5s;
+  animation-delay: 2s;
+  animation-fill-mode: forwards;
+  opacity: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  img:nth-child(1) {
+    width: 500px !important;
+  }
+
+  img:nth-child(2) {
+    width: 80px;
+    margin-left: 60px;
+  }
+}
+
+@keyframes slide {
+  to {
+    pointer-events: none;
+    opacity: 0;
+  }
 }
 
 #scroll-back {
@@ -199,6 +234,18 @@ main {
 @media only screen and (max-width: 1900px) {
   body {
     overflow-x: hidden !important;
+  }
+
+  .slider {
+    flex-direction: row !important;
+    img:nth-child(1) {
+      width: 200px !important;
+    }
+
+    img:nth-child(2) {
+      width: 30px !important;
+      margin-left: 12px !important;
+    }
   }
 
 
