--- a/_about.scss
+++ b/_about.scss
@@ -5,7 +5,7 @@
 
   h3 {
     white-space: nowrap;
-    width: 100%;
+    width: fit-content;
     display: flex;
     justify-content: center;
     color: #323232;
