--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,9 @@ header nav .sub .content a:hover {
 }
 #about h3 {
   white-space: nowrap;
-  width: 100%;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
   display: flex;
   justify-content: center;
   color: #323232;
