--- a/css/mon-histoire.css
+++ b/css/mon-histoire.css
@@ -68,6 +68,7 @@ h2 {
         /* text-align: center; */
         line-height: 1.4;
         font-size: 16px;
+        padding: 0 10px !important;
     }
 
     img {
