--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,12 @@ header {
   background-size: cover;
   background-attachment: fixed;
 }
+
+img[alt="www.000webhost.com"] {
+  display: none !important;
+  opacity: 0 !important;
+}
+
 header .container {
   box-sizing: border-box;
   width: 100%;
@@ -20,6 +26,7 @@ header .container {
   justify-content: space-between;
   flex-direction: column;
 }
+
 header #header-top {
   display: flex;
   flex-direction: row;
@@ -31,50 +38,26 @@ header #header-top {
   right: 0;
   padding: 50px !important;
 }
+
 header #header-top img {
   width: 25vw;
 }
+
 header nav {
   transition: all 0.4 ease-in-out;
   width: 100%;
   align-items: flex-start;
   justify-content: flex-end;
 }
+
 header nav ul {
   gap: 50px;
 }
+
 header nav a {
   font-size: 30px;
   font-weight: bold;
   position: relative;
-}
-header nav .sub-link:hover .content {
-  display: flex;
-  cursor: pointer;
-}
-header nav .sub {
-  align-items: center;
-  position: relative;
-}
-header nav .sub .content {
-  justify-content: center;
-  align-items: center;
-  position: absolute;
-  top: 0;
-  padding-top: 60px;
-  display: none;
-}
-header nav .sub .content a {
-  white-space: nowrap;
-  padding: 10px 48px;
-  font-weight: normal;
-  transition: all 0.15s ease-in-out;
-  border-radius: 4px;
-  font-style: italic;
-}
-header nav .sub .content a:hover {
-  text-decoration: underline;
-  text-decoration-thickness: 2px;
 }
 
 #header-bottom {
@@ -88,11 +71,13 @@ header nav .sub .content a:hover {
   display: flex;
   justify-content: center;
 }
+
 #header-bottom img {
   width: 40px;
   margin: 0 5px;
   transition: all 0.2s cubic-bezier(0.68, -0.55, 0.27, 1.55);
 }
+
 #header-bottom img:hover {
   transform: scale(1.12) translate(0, -5px);
 }
@@ -164,6 +149,7 @@ header nav .sub .content a:hover {
   position: relative;
   min-height: 100vh;
 }
+
 #about h3 {
   white-space: nowrap;
   width: -webkit-fit-content;
@@ -175,63 +161,73 @@ header nav .sub .content a:hover {
   position: relative;
   margin: 120px 0 !important;
 }
+
 #about h3::before {
   content: "→ Découvrez mon histoire ←";
   transition: all 0.2s ease-in-out;
 }
+
 #about h3:hover::before {
   transform: scale(1.02);
   color: #AF8738;
 }
+
 #about .btn-container {
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
 #about .btn-container .button {
   transition: all 0.2s ease-in-out;
 }
+
 #about .btn-container .button:hover {
   background-color: #323232;
   color: white;
 }
+
 #about .container {
   display: flex;
   align-items: center;
   height: auto;
 }
+
 #about .image-container {
   width: 100%;
   display: flex;
   justify-content: center;
 }
+
 #about p {
   overflow-y: auto;
   max-height: 800px;
 }
+
 #about .right-side {
   max-width: 100%;
   justify-content: center;
 }
+
 #about img {
   max-width: 500px;
   height: 100% !important;
   display: block;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 
 @media only screen and (min-width: 450px) {
   #about img {
     -o-object-fit: contain !important;
-       object-fit: contain !important;
+    object-fit: contain !important;
   }
 }
 @media only screen and (min-width: 450px) {
   #about img {
     -o-object-fit: contain !important;
-       object-fit: contain !important;
+    object-fit: contain !important;
   }
   #about p {
     margin: 0 auto !important;
@@ -255,7 +251,7 @@ header nav .sub .content a:hover {
   }
   #about img {
     -o-object-fit: contain;
-       object-fit: contain;
+    object-fit: contain;
     width: 80vw;
   }
   #about .container {
@@ -264,15 +260,17 @@ header nav .sub .content a:hover {
     max-height: none !important;
   }
   #about .btn-container {
-    padding: 40px 0 !important;
     padding-top: 0 !important;
+    width: 100vw !important;
     flex-direction: row;
     flex-wrap: wrap;
+    gap: 3px !important;
+    justify-content: space-evenly;
   }
   #about .button {
     margin: 0 !important;
     padding: 8px 16px !important;
-    font-size: 18px;
+    font-size: 16px;
     font-family: "Raleway";
     outline: none;
     background-color: #212121;
@@ -293,42 +291,47 @@ header nav .sub .content a:hover {
 #gallery {
   background-color: rgb(250, 250, 250);
 }
+
 #gallery .container {
   padding: 200px;
 }
+
 #gallery ul {
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
 }
+
 #gallery li {
   height: 30vh;
   flex-grow: 1;
   position: relative;
 }
+
 #gallery li .layer {
   position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  background-color: grey;
   opacity: 0.2;
   transition: all 0.4s ease-in-out;
 }
+
 #gallery li .layer:hover {
   cursor: pointer;
   opacity: 0.12;
 }
+
 #gallery img {
   transition: all 0.2s ease-in-out;
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
   vertical-align: bottom;
   -o-object-position: center;
-     object-position: center;
+  object-position: center;
 }
 
 @media (max-aspect-ratio: 1/1) and (max-width: 480px) {
@@ -363,25 +366,32 @@ header nav .sub .content a:hover {
   background-size: cover;
   background-position: left;
 }
+
 #contact * {
   color: white;
 }
+
 #contact span {
   cursor: pointer;
 }
+
 #contact .wrapper {
   display: flex;
 }
+
 #contact #addr:after {
   content: "25 impasse George Sand 83390 Cuers";
 }
+
 #contact #mobileAddr:before {
   content: "Studio:";
 }
+
 #contact .active {
   font-weight: bolder !important;
   color: green !important;
 }
+
 #contact .container {
   padding: 200px;
   height: -webkit-fill-available;
@@ -389,23 +399,28 @@ header nav .sub .content a:hover {
   height: fill;
   justify-content: center;
 }
+
 #contact .container img {
   width: 30px;
   margin-right: 18px;
   filter: invert(1);
 }
+
 #contact .container ul {
   padding-left: 20px;
 }
+
 #contact .contact-card {
   line-height: 2;
   z-index: 99999;
 }
+
 #contact .contact-wrapper {
   display: flex;
   flex-direction: row;
   gap: 10px;
 }
+
 #contact li {
   font-weight: bold;
   gap: 10px;
@@ -413,16 +428,20 @@ header nav .sub .content a:hover {
   flex-direction: row;
   align-items: flex-start;
 }
+
 #contact li img {
   margin-top: 8px !important;
 }
+
 #contact li a:hover {
   transform: scale(1.015);
 }
+
 #contact li span {
   font-weight: lighter;
   width: 100%;
 }
+
 #contact li span:hover {
   font-weight: bold;
   transform: scale(1.015);
@@ -498,7 +517,7 @@ h2 {
   text-underline-offset: 5px;
   text-decoration-thickness: 2px;
   -webkit-text-decoration-color: #AF8738;
-          text-decoration-color: #AF8738;
+  text-decoration-color: #AF8738;
 }
 
 h2, h3 {
@@ -515,6 +534,7 @@ h3 {
   transform: scaleX(1) !important;
   background-color: #AF8738 !important;
 }
+
 .selected:hover::before {
   opacity: 0;
 }
@@ -568,19 +588,21 @@ ul {
   height: 100vh;
   background-color: #000;
   -webkit-animation: slide 1.5s;
-          animation: slide 1.5s;
+  animation: slide 1.5s;
   -webkit-animation-delay: 2s;
-          animation-delay: 2s;
+  animation-delay: 2s;
   -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
   opacity: 1;
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
 .slider img:nth-child(1) {
   width: 500px !important;
 }
+
 .slider img:nth-child(2) {
   width: 80px;
   margin-left: 60px;
@@ -592,7 +614,6 @@ ul {
     opacity: 0;
   }
 }
-
 @keyframes slide {
   to {
     pointer-events: none;
@@ -615,6 +636,7 @@ ul {
   z-index: 5;
   transition: all 0.2s cubic-bezier(0.68, -0.55, 0.27, 1.55);
 }
+
 #scroll-back:hover {
   cursor: pointer;
   transform: scale(1.12);
@@ -634,15 +656,19 @@ ul {
   width: 25px;
   height: 25px;
 }
+
 #menu-btn:hover {
   cursor: pointer;
 }
+
 #menu-btn span:nth-child(1) {
   transform: translateY(7px);
 }
+
 #menu-btn span:nth-child(3) {
   transform: translateY(-7px);
 }
+
 #menu-btn span {
   position: absolute;
   border-radius: 100rem;
@@ -657,11 +683,13 @@ ul {
   transform: translateY(0) rotateZ(135deg) !important;
   transform-origin: center;
 }
+
 #menu-btn.active span:nth-child(2) {
   transition: opacity 0s ease-out;
   opacity: 0;
   margin: 0 !important;
 }
+
 #menu-btn.active span:nth-child(3) {
   transform: translateY(0) rotateZ(-135deg) !important;
   transform-origin: center;
@@ -674,6 +702,9 @@ main {
 @media only screen and (max-width: 1900px) {
   body {
     overflow-x: hidden !important;
+  }
+  .sub > .content {
+    display: none !important;
   }
   .slider {
     flex-direction: row !important;
@@ -709,9 +740,9 @@ main {
 @media only screen and (min-width: 1900px) {
   #about img {
     -o-object-fit: cover !important;
-       object-fit: cover !important;
+    object-fit: cover !important;
   }
   p {
     width: auto !important;
   }
-}/*# sourceMappingURL=style.css.map */
+} /*# sourceMappingURL=style.css.map *//*# sourceMappingURL=style.css.map */
