--- a/css/tarifs.css
+++ b/css/tarifs.css
@@ -11,7 +11,6 @@ h2 {
 
 main {
     width: 100vw;
-    height: 100vh !important;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -25,6 +24,7 @@ main {
     align-items: center;
     height: auto;
     padding: 40px 0 !important;
+    height: 100vh;
 }
 
 .button {
@@ -50,7 +50,7 @@ main {
 
 .card {
     width: 12vw;
-    height: 30vh;
+    max-height: 30vh;
     position: relative;
     cursor: pointer;
     overflow: hidden;
@@ -107,7 +107,8 @@ main {
 }
 
 .col {
-    height: auto;
+    height: 100vh;
+    justify-content: center;
 }
 
 @media only screen and (max-width: 1600px) {
@@ -117,8 +118,9 @@ main {
     }
 
     .col {
-        align-items: center !important;
-        height: 100vh !important;
+        height: auto !important;
+        padding-bottom: 40px;
+        align-items: center;
     }
 
     .card-wrapper {
@@ -127,9 +129,14 @@ main {
         gap: 30px;
     }
 
+    .container {
+        height: auto !important;
+    }
+
     .card {
         width: 80%;
-        height: 60vh;
+        max-height: 30vh;
+        height: 30vh;
     }
 
     .layer {
@@ -156,6 +163,6 @@ main {
 
     .card > img {
         width: 100%;
-        height: 100%;
+        height: 100vh;
     }
 }
