--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Abhaya+Libre&family=Raleway:wght@300&display=swap");
 header {
   width: 100%;
@@ -10,12 +9,6 @@ header {
   background-size: cover;
   background-attachment: fixed;
 }
-
-img[alt="www.000webhost.com"] {
-  display: none !important;
-  opacity: 0 !important;
-}
-
 header .container {
   box-sizing: border-box;
   width: 100%;
@@ -26,7 +19,6 @@ header .container {
   justify-content: space-between;
   flex-direction: column;
 }
-
 header #header-top {
   display: flex;
   flex-direction: row;
@@ -38,22 +30,18 @@ header #header-top {
   right: 0;
   padding: 50px !important;
 }
-
 header #header-top img {
   width: 25vw;
 }
-
 header nav {
   transition: all 0.4 ease-in-out;
   width: 100%;
   align-items: flex-start;
   justify-content: flex-end;
 }
-
 header nav ul {
   gap: 50px;
 }
-
 header nav a {
   font-size: 30px;
   font-weight: bold;
@@ -71,13 +59,11 @@ header nav a {
   display: flex;
   justify-content: center;
 }
-
 #header-bottom img {
   width: 40px;
   margin: 0 5px;
   transition: all 0.2s cubic-bezier(0.68, -0.55, 0.27, 1.55);
 }
-
 #header-bottom img:hover {
   transform: scale(1.12) translate(0, -5px);
 }
@@ -149,7 +135,6 @@ header nav a {
   position: relative;
   min-height: 100vh;
 }
-
 #about h3 {
   white-space: nowrap;
   width: -webkit-fit-content;
@@ -159,75 +144,56 @@ header nav a {
   justify-content: center;
   color: #323232;
   position: relative;
-  margin: 120px 0 !important;
 }
-
-#about h3::before {
-  content: "→ Découvrez mon histoire ←";
-  transition: all 0.2s ease-in-out;
-}
-
-#about h3:hover::before {
-  transform: scale(1.02);
-  color: #AF8738;
-}
-
 #about .btn-container {
   width: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-
 #about .btn-container .button {
   transition: all 0.2s ease-in-out;
 }
-
 #about .btn-container .button:hover {
   background-color: #323232;
   color: white;
 }
-
 #about .container {
   display: flex;
   align-items: center;
   height: auto;
 }
-
 #about .image-container {
   width: 100%;
   display: flex;
   justify-content: center;
 }
-
 #about p {
   overflow-y: auto;
   max-height: 800px;
 }
-
 #about .right-side {
   max-width: 100%;
   justify-content: center;
 }
-
 #about img {
   max-width: 500px;
   height: 100% !important;
   display: block;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
 }
 
 @media only screen and (min-width: 450px) {
   #about img {
     -o-object-fit: contain !important;
-    object-fit: contain !important;
+       object-fit: contain !important;
   }
 }
 @media only screen and (min-width: 450px) {
   #about img {
     -o-object-fit: contain !important;
-    object-fit: contain !important;
+       object-fit: contain !important;
   }
   #about p {
     margin: 0 auto !important;
@@ -246,12 +212,9 @@ header nav a {
     font-size: 30px !important;
     margin: 60px 0 !important;
   }
-  #about h3::before {
-    content: "→Découvrez mon histoire←";
-  }
   #about img {
     -o-object-fit: contain;
-    object-fit: contain;
+       object-fit: contain;
     width: 80vw;
   }
   #about .container {
@@ -291,23 +254,19 @@ header nav a {
 #gallery {
   background-color: rgb(250, 250, 250);
 }
-
 #gallery .container {
   padding: 200px;
 }
-
 #gallery ul {
   display: flex;
   flex-wrap: wrap;
   gap: 10px;
 }
-
 #gallery li {
   height: 30vh;
   flex-grow: 1;
   position: relative;
 }
-
 #gallery li .layer {
   position: absolute;
   top: 0;
@@ -317,21 +276,19 @@ header nav a {
   opacity: 0.2;
   transition: all 0.4s ease-in-out;
 }
-
 #gallery li .layer:hover {
   cursor: pointer;
   opacity: 0.12;
 }
-
 #gallery img {
   transition: all 0.2s ease-in-out;
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
-  object-fit: cover;
+     object-fit: cover;
   vertical-align: bottom;
   -o-object-position: center;
-  object-position: center;
+     object-position: center;
 }
 
 @media (max-aspect-ratio: 1/1) and (max-width: 480px) {
@@ -366,32 +323,25 @@ header nav a {
   background-size: cover;
   background-position: left;
 }
-
 #contact * {
   color: white;
 }
-
 #contact span {
   cursor: pointer;
 }
-
 #contact .wrapper {
   display: flex;
 }
-
 #contact #addr:after {
   content: "25 impasse George Sand 83390 Cuers";
 }
-
 #contact #mobileAddr:before {
   content: "Studio:";
 }
-
 #contact .active {
   font-weight: bolder !important;
   color: green !important;
 }
-
 #contact .container {
   padding: 200px;
   height: -webkit-fill-available;
@@ -399,28 +349,23 @@ header nav a {
   height: fill;
   justify-content: center;
 }
-
 #contact .container img {
   width: 30px;
   margin-right: 18px;
   filter: invert(1);
 }
-
 #contact .container ul {
   padding-left: 20px;
 }
-
 #contact .contact-card {
   line-height: 2;
   z-index: 99999;
 }
-
 #contact .contact-wrapper {
   display: flex;
   flex-direction: row;
   gap: 10px;
 }
-
 #contact li {
   font-weight: bold;
   gap: 10px;
@@ -428,20 +373,16 @@ header nav a {
   flex-direction: row;
   align-items: flex-start;
 }
-
 #contact li img {
   margin-top: 8px !important;
 }
-
 #contact li a:hover {
   transform: scale(1.015);
 }
-
 #contact li span {
   font-weight: lighter;
   width: 100%;
 }
-
 #contact li span:hover {
   font-weight: bold;
   transform: scale(1.015);
@@ -517,7 +458,7 @@ h2 {
   text-underline-offset: 5px;
   text-decoration-thickness: 2px;
   -webkit-text-decoration-color: #AF8738;
-  text-decoration-color: #AF8738;
+          text-decoration-color: #AF8738;
 }
 
 h2, h3 {
@@ -534,7 +475,6 @@ h3 {
   transform: scaleX(1) !important;
   background-color: #AF8738 !important;
 }
-
 .selected:hover::before {
   opacity: 0;
 }
@@ -549,7 +489,7 @@ ul {
   bottom: 0;
   width: 100%;
   height: 3px;
-  background-color: #000;
+  background-color: #323232;
   transform-origin: 100% 0;
   transform: scaleX(0);
   transition: opacity 0.4s ease-in-out, transform 0.4s ease;
@@ -572,54 +512,10 @@ ul {
 
 .button {
   padding: 8px 16px !important;
-  font-weight: normal;
-  font-family: "Abhaya";
+  outline: 1px solid #525252;
   color: #212121;
 }
 
-.slider {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 999999;
-  width: 100%;
-  height: 100vh;
-  background-color: #000;
-  -webkit-animation: slide 1.5s;
-  animation: slide 1.5s;
-  -webkit-animation-delay: 2s;
-  animation-delay: 2s;
-  -webkit-animation-fill-mode: forwards;
-  animation-fill-mode: forwards;
-  opacity: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.slider img:nth-child(1) {
-  width: 500px !important;
-}
-
-.slider img:nth-child(2) {
-  width: 80px;
-  margin-left: 60px;
-}
-
-@-webkit-keyframes slide {
-  to {
-    pointer-events: none;
-    opacity: 0;
-  }
-}
-@keyframes slide {
-  to {
-    pointer-events: none;
-    opacity: 0;
-  }
-}
 #scroll-back {
   display: none;
   padding: 20px;
@@ -636,7 +532,6 @@ ul {
   z-index: 5;
   transition: all 0.2s cubic-bezier(0.68, -0.55, 0.27, 1.55);
 }
-
 #scroll-back:hover {
   cursor: pointer;
   transform: scale(1.12);
@@ -656,19 +551,15 @@ ul {
   width: 25px;
   height: 25px;
 }
-
 #menu-btn:hover {
   cursor: pointer;
 }
-
 #menu-btn span:nth-child(1) {
   transform: translateY(7px);
 }
-
 #menu-btn span:nth-child(3) {
   transform: translateY(-7px);
 }
-
 #menu-btn span {
   position: absolute;
   border-radius: 100rem;
@@ -683,13 +574,11 @@ ul {
   transform: translateY(0) rotateZ(135deg) !important;
   transform-origin: center;
 }
-
 #menu-btn.active span:nth-child(2) {
   transition: opacity 0s ease-out;
   opacity: 0;
   margin: 0 !important;
 }
-
 #menu-btn.active span:nth-child(3) {
   transform: translateY(0) rotateZ(-135deg) !important;
   transform-origin: center;
@@ -702,19 +591,6 @@ main {
 @media only screen and (max-width: 1900px) {
   body {
     overflow-x: hidden !important;
-  }
-  .sub > .content {
-    display: none !important;
-  }
-  .slider {
-    flex-direction: row !important;
-  }
-  .slider img:nth-child(1) {
-    width: 200px !important;
-  }
-  .slider img:nth-child(2) {
-    width: 30px !important;
-    margin-left: 12px !important;
   }
   .row {
     flex-direction: column;
@@ -740,9 +616,9 @@ main {
 @media only screen and (min-width: 1900px) {
   #about img {
     -o-object-fit: cover !important;
-    object-fit: cover !important;
+       object-fit: cover !important;
   }
   p {
     width: auto !important;
   }
-} /*# sourceMappingURL=style.css.map *//*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
