--- a/style.scss
+++ b/style.scss
@@ -1,434 +1,10 @@
-@charset "UTF-8";
 @import url("https://fonts.googleapis.com/css2?family=Abhaya+Libre&family=Raleway:wght@300&display=swap");
-header {
-  width: 100%;
-  height: 100vh;
-  position: relative;
-  background-image: url("../assets/images/background.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-attachment: fixed;
-}
 
-img[alt="www.000webhost.com"]{
-    display: none !important;
-    opacity: 0 !important;
-}
-header .container {
-  box-sizing: border-box;
-  width: 100%;
-  height: 100%;
-  padding: 120px;
-  padding-bottom: 0;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: column;
-}
-header #header-top {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  padding: 50px !important;
-}
-header #header-top img {
-  width: 25vw;
-}
-header nav {
-  transition: all 0.4 ease-in-out;
-  width: 100%;
-  align-items: flex-start;
-  justify-content: flex-end;
-}
-header nav ul {
-  gap: 50px;
-}
-header nav a {
-  font-size: 30px;
-  font-weight: bold;
-  position: relative;
-}
+@import 'header';
+@import 'about';
+@import 'gallery';
+@import 'contact';
 
-#header-bottom {
-  background-color: white;
-  padding: 20px;
-  position: absolute;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  z-index: 5;
-  display: flex;
-  justify-content: center;
-}
-#header-bottom img {
-  width: 40px;
-  margin: 0 5px;
-  transition: all 0.2s cubic-bezier(0.68, -0.55, 0.27, 1.55);
-}
-#header-bottom img:hover {
-  transform: scale(1.12) translate(0, -5px);
-}
-
-#header-bottom-mobile {
-  display: none;
-}
-
-@media only screen and (max-width: 1900px) {
-  header {
-    background: white;
-    height: -webkit-fit-content;
-    height: -moz-fit-content;
-    height: fit-content;
-  }
-  header #header-bottom-mobile {
-    display: block;
-  }
-  header #header-bottom-mobile .row {
-    flex-direction: row !important;
-    justify-content: center;
-  }
-  header #header-bottom-mobile img {
-    width: 30px;
-    margin: 0 5px !important;
-  }
-  header #header-bottom {
-    display: none;
-  }
-  header .container {
-    padding: 50px !important;
-  }
-  header nav {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  header #header-top {
-    padding: 50px 30px !important;
-  }
-  header #header-top img {
-    width: 30vh !important;
-  }
-  header nav > ul {
-    transition: all 0.2s ease-in-out;
-    display: flex;
-    justify-content: center;
-    overflow: hidden;
-    height: 100vh;
-    width: 400px;
-    position: fixed;
-    background-color: white;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 6;
-    text-align: center;
-    transform: translateX(100%);
-    border-left: 2px solid #323232;
-  }
-}
-@media only screen and (max-width: 500px) {
-  header nav > ul {
-    width: 100%;
-  }
-}
-#about {
-  padding: 120px 120px;
-  position: relative;
-  min-height: 100vh;
-}
-#about h3 {
-  white-space: nowrap;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  display: flex;
-  justify-content: center;
-  color: #323232;
-  position: relative;
-  margin: 120px 0 !important;
-}
-#about h3::before {
-  content: "→ Découvrez mon histoire ←";
-  transition: all 0.2s ease-in-out;
-}
-#about h3:hover::before {
-  transform: scale(1.02);
-  color: #AF8738;
-}
-#about .btn-container {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-#about .btn-container .button {
-  transition: all 0.2s ease-in-out;
-}
-#about .btn-container .button:hover {
-  background-color: #323232;
-  color: white;
-}
-#about .container {
-  display: flex;
-  align-items: center;
-  height: auto;
-}
-#about .image-container {
-  width: 100%;
-  display: flex;
-  justify-content: center;
-}
-#about p {
-  overflow-y: auto;
-  max-height: 800px;
-}
-#about .right-side {
-  max-width: 100%;
-  justify-content: center;
-}
-#about img {
-  max-width: 500px;
-  height: 100% !important;
-  display: block;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-
-@media only screen and (min-width: 450px) {
-  #about img {
-    -o-object-fit: contain !important;
-       object-fit: contain !important;
-  }
-}
-@media only screen and (min-width: 450px) {
-  #about img {
-    -o-object-fit: contain !important;
-       object-fit: contain !important;
-  }
-  #about p {
-    margin: 0 auto !important;
-    width: 80vw;
-    text-align: justify !important;
-  }
-}
-@media only screen and (max-width: 1900px) {
-  #about {
-    margin-top: 60px !important;
-  }
-  #about * {
-    padding: 0 !important;
-  }
-  #about h3 {
-    font-size: 30px !important;
-    margin: 60px 0 !important;
-  }
-  #about h3::before {
-    content: "→Découvrez mon histoire←";
-  }
-  #about img {
-    -o-object-fit: contain;
-       object-fit: contain;
-    width: 80vw;
-  }
-  #about .container {
-    flex-direction: column !important;
-    align-items: center;
-    max-height: none !important;
-  }
-  #about .btn-container {
-    padding-top: 0 !important;
-    width: 100vw !important;
-    flex-direction: row;
-    flex-wrap: wrap;
-    gap: 3px !important;
-    justify-content: space-evenly;
-  }
-  #about .button {
-    margin: 0 !important;
-    padding: 8px 16px !important;
-    font-size: 16px;
-    font-family: "Raleway";
-    outline: none;
-    background-color: #212121;
-    color: white;
-  }
-  #about .right-side {
-    max-width: 100% !important;
-    padding: 0 10px !important;
-  }
-  #about .right-side p {
-    letter-spacing: 0;
-    line-height: 1.4;
-    text-align: center;
-    font-size: 20px;
-    max-height: 50vh;
-  }
-}
-#gallery {
-  background-color: rgb(250, 250, 250);
-}
-#gallery .container {
-  padding: 200px;
-}
-#gallery ul {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-}
-#gallery li {
-  height: 30vh;
-  flex-grow: 1;
-  position: relative;
-}
-#gallery li .layer {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  opacity: 0.2;
-  transition: all 0.4s ease-in-out;
-}
-#gallery li .layer:hover {
-  cursor: pointer;
-  opacity: 0.12;
-}
-#gallery img {
-  transition: all 0.2s ease-in-out;
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  vertical-align: bottom;
-  -o-object-position: center;
-     object-position: center;
-}
-
-@media (max-aspect-ratio: 1/1) and (max-width: 480px) {
-  #gallery {
-    padding-top: 20px !important;
-  }
-  #gallery ul {
-    flex-wrap: nowrap;
-    flex-direction: row !important;
-    overflow-x: scroll;
-  }
-  #gallery li {
-    height: auto;
-    width: 100%;
-  }
-  #gallery img {
-    width: 200px;
-    max-height: none 50vh !important;
-    min-width: 0;
-  }
-  #gallery .container {
-    padding: 0 10px !important;
-  }
-}
-#contact {
-  position: relative;
-  margin-top: 100px !important;
-  width: 100%;
-  height: 100vh;
-  background-image: url("../assets/images/contact-bg.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: left;
-}
-#contact * {
-  color: white;
-}
-#contact span {
-  cursor: pointer;
-}
-#contact .wrapper {
-  display: flex;
-}
-#contact #addr:after {
-  content: "25 impasse George Sand 83390 Cuers";
-}
-#contact #mobileAddr:before {
-  content: "Studio:";
-}
-#contact .active {
-  font-weight: bolder !important;
-  color: green !important;
-}
-#contact .container {
-  padding: 200px;
-  height: -webkit-fill-available;
-  height: -moz-available;
-  height: fill;
-  justify-content: center;
-}
-#contact .container img {
-  width: 30px;
-  margin-right: 18px;
-  filter: invert(1);
-}
-#contact .container ul {
-  padding-left: 20px;
-}
-#contact .contact-card {
-  line-height: 2;
-  z-index: 99999;
-}
-#contact .contact-wrapper {
-  display: flex;
-  flex-direction: row;
-  gap: 10px;
-}
-#contact li {
-  font-weight: bold;
-  gap: 10px;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-}
-#contact li img {
-  margin-top: 8px !important;
-}
-#contact li a:hover {
-  transform: scale(1.015);
-}
-#contact li span {
-  font-weight: lighter;
-  width: 100%;
-}
-#contact li span:hover {
-  font-weight: bold;
-  transform: scale(1.015);
-}
-
-@media only screen and (max-width: 1900px) {
-  #contact {
-    font-size: 18px;
-  }
-  #contact .container {
-    align-items: center;
-    justify-content: center;
-    padding: 10px !important;
-  }
-  #contact .container img {
-    width: 20px;
-    margin-right: 10px !important;
-  }
-  #contact #addr:after {
-    content: "Cliquez pour voir";
-  }
-  #contact #mobileAddr:before {
-    content: "Adresse sutdio:";
-  }
-  h3 {
-    font-size: 70px !important;
-  }
-}
 * {
   padding: 0;
   margin: 0;
@@ -455,31 +31,31 @@ a {
   text-decoration: none;
   color: #212121;
   -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
 }
 
 p {
-  font-family: Raleway;
-  font-size: 22px;
-  font-weight: 400;
-  line-height: 1.8;
-  letter-spacing: 0.05em;
-  text-align: justify;
+    font-family: Raleway;
+    font-size: 22px;
+    font-weight: 400;
+    line-height: 1.8;
+    letter-spacing: 0.05em;
+    text-align: justify;
+
 }
 
 h2 {
-  color: #212121;
-  text-transform: capitalize;
-  text-decoration: underline;
-  text-underline-offset: 5px;
-  text-decoration-thickness: 2px;
-  -webkit-text-decoration-color: #AF8738;
-          text-decoration-color: #AF8738;
+    color: #212121;
+    text-transform: capitalize;
+    text-decoration: underline;
+    text-underline-offset: 5px;
+    text-decoration-thickness: 2px;
+    text-decoration-color: #AF8738;
 }
 
-h2, h3 {
+h2,h3 {
   margin-bottom: 40px !important;
 }
 
@@ -489,16 +65,19 @@ h3 {
   font-weight: normal;
 }
 
-.selected::before {
-  transform: scaleX(1) !important;
-  background-color: #AF8738 !important;
-}
-.selected:hover::before {
-  opacity: 0;
+.selected {
+    &::before{
+        transform: scaleX(1) !important;
+        background-color: #AF8738 !important;
+    }
+
+    &:hover::before {
+        opacity: 0;
+    }
 }
 
 ul {
-  list-style-type: none;
+    list-style-type: none;
 }
 
 .nav-link::before {
@@ -507,192 +86,153 @@ ul {
   bottom: 0;
   width: 100%;
   height: 3px;
-  background-color: #000;
+  background-color: #323232;
   transform-origin: 100% 0;
   transform: scaleX(0);
-  transition: opacity 0.4s ease-in-out, transform 0.4s ease;
+  transition: opacity .4s ease-in-out, transform .4s ease;
 }
-
 .nav-link:hover::before {
   transform-origin: 0 0;
   transform: scaleX(100%);
 }
 
 .col {
-  display: flex;
-  flex-direction: column;
+    display: flex;
+    flex-direction: column;
 }
 
 .row {
-  display: flex;
-  flex-direction: row;
+    display: flex;
+    flex-direction: row;
 }
 
 .button {
   padding: 8px 16px !important;
-  font-weight: normal;
-  font-family: "Abhaya";
+  outline: 1px solid #525252;
   color: #212121;
 }
 
-.slider {
-  position: absolute;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  z-index: 999999;
-  width: 100%;
-  height: 100vh;
-  background-color: #000;
-  -webkit-animation: slide 1.5s;
-          animation: slide 1.5s;
-  -webkit-animation-delay: 2s;
-          animation-delay: 2s;
-  -webkit-animation-fill-mode: forwards;
-          animation-fill-mode: forwards;
-  opacity: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-.slider img:nth-child(1) {
-  width: 500px !important;
-}
-.slider img:nth-child(2) {
-  width: 80px;
-  margin-left: 60px;
-}
-
-@-webkit-keyframes slide {
-  to {
-    pointer-events: none;
-    opacity: 0;
-  }
-}
-
-@keyframes slide {
-  to {
-    pointer-events: none;
-    opacity: 0;
-  }
-}
 #scroll-back {
   display: none;
   padding: 20px;
   border-radius: 100rem;
   height: 3em;
   width: 3em;
+
   position: fixed;
   bottom: 3vh;
   right: 3vh;
+
   background-color: #fefefe;
   border: none;
   box-shadow: 3px 3px 12px #ccc;
   font-size: 24px;
   z-index: 5;
   transition: all 0.2s cubic-bezier(0.68, -0.55, 0.27, 1.55);
-}
-#scroll-back:hover {
-  cursor: pointer;
-  transform: scale(1.12);
+
+  &:hover {
+    cursor: pointer;
+    transform: scale(1.12);
+  }
 }
 
-#menu-btn {
+#menu-btn{
   display: none;
   outline: none;
   border: none;
   flex-direction: column;
   background-color: transparent;
-  height: -webkit-fit-content;
-  height: -moz-fit-content;
   height: fit-content;
   position: absolute;
   right: 20px;
+
   width: 25px;
   height: 25px;
-}
-#menu-btn:hover {
-  cursor: pointer;
-}
-#menu-btn span:nth-child(1) {
-  transform: translateY(7px);
-}
-#menu-btn span:nth-child(3) {
-  transform: translateY(-7px);
-}
-#menu-btn span {
-  position: absolute;
-  border-radius: 100rem;
-  width: 100%;
-  height: 3px;
-  background-color: #212121;
-  transition: all 0.2s ease-in-out;
-  pointer-events: none;
+
+  &:hover {
+    cursor: pointer;
+  }
+
+  span:nth-child(1) {
+    transform: translateY(7px);
+  }
+
+  span:nth-child(3) {
+    transform: translateY(-7px);
+  }
+
+  span {
+    position: absolute;
+    border-radius: 100rem;
+    width: 100%;
+    height: 3px;
+    background-color: #212121;
+    transition: all .2s ease-in-out;
+    pointer-events: none;
+  }
 }
 
-#menu-btn.active span:nth-child(1) {
-  transform: translateY(0) rotateZ(135deg) !important;
-  transform-origin: center;
-}
-#menu-btn.active span:nth-child(2) {
-  transition: opacity 0s ease-out;
-  opacity: 0;
-  margin: 0 !important;
-}
-#menu-btn.active span:nth-child(3) {
-  transform: translateY(0) rotateZ(-135deg) !important;
-  transform-origin: center;
+#menu-btn.active {
+  span:nth-child(1){
+    transform: translateY(0) rotateZ(135deg) !important;
+    transform-origin: center;
+  }
+
+  span:nth-child(2){
+    transition: opacity 0s ease-out;
+    opacity: 0;
+    margin: 0 !important;
+  }
+  span:nth-child(3){
+    transform: translateY(0) rotateZ(-135deg) !important;
+    transform-origin: center;
+  }
 }
 
 main {
-  transition: filter 0.2s ease-in-out;
+  transition: filter .2s ease-in-out;
 }
 
+// Mobile version
 @media only screen and (max-width: 1900px) {
   body {
     overflow-x: hidden !important;
   }
-  .sub > .content {
-    display: none !important;
-  }
-  .slider {
-    flex-direction: row !important;
-  }
-  .slider img:nth-child(1) {
-    width: 200px !important;
-  }
-  .slider img:nth-child(2) {
-    width: 30px !important;
-    margin-left: 12px !important;
-  }
+
+
   .row {
     flex-direction: column;
   }
+
   #scroll-back {
     width: 40px;
     height: 40px;
     font-size: 14px;
   }
+
   * {
     padding: 0 !important;
     margin: 0 !important;
   }
+
   #menu-btn {
     display: flex;
     z-index: 9999 !important;
   }
+
   h2 {
     margin-top: 40px !important;
     text-align: center;
   }
 }
+
 @media only screen and (min-width: 1900px) {
-  #about img {
-    -o-object-fit: cover !important;
-       object-fit: cover !important;
+  #about{
+    img{
+      object-fit: cover !important;
+    }
   }
-  p {
+  p{
     width: auto !important;
   }
-}/*# sourceMappingURL=style.css.map */
+}
