--- a/css/style.css
+++ b/css/style.css
@@ -48,6 +48,16 @@ header nav a {
   position: relative;
 }
 
+#title {
+  white-space: nowrap;
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  color: #323232;
+  margin: 0 !important;
+  margin-top: 80px !important;
+}
+
 #header-bottom {
   background-color: white;
   padding: 20px;
@@ -78,6 +88,12 @@ header nav a {
     height: -webkit-fit-content;
     height: -moz-fit-content;
     height: fit-content;
+    width: 100%;
+  }
+  header #title {
+    font-size: 30px !important;
+    margin: 0 !important;
+    font-size: 12vw !important;
   }
   header #header-bottom-mobile {
     display: block;
@@ -103,6 +119,7 @@ header nav a {
   }
   header #header-top {
     padding: 50px 30px !important;
+    padding-bottom: 0 !important;
   }
   header #header-top img {
     width: 30vh !important;
@@ -132,17 +149,7 @@ header nav a {
 }
 #about {
   padding: 120px 120px;
-  position: relative;
-  min-height: 100vh;
-}
-#about h3 {
-  white-space: nowrap;
-  width: -webkit-fit-content;
-  width: -moz-fit-content;
-  width: fit-content;
-  display: flex;
-  justify-content: center;
-  color: #323232;
+  padding-top: 0;
   position: relative;
 }
 #about .btn-container {
@@ -150,6 +157,7 @@ header nav a {
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 40px;
 }
 #about .btn-container .button {
   transition: all 0.2s ease-in-out;
@@ -182,6 +190,7 @@ header nav a {
   display: block;
   -o-object-fit: cover;
      object-fit: cover;
+  margin: 80px 0 !important;
 }
 
 @media only screen and (min-width: 450px) {
@@ -208,14 +217,11 @@ header nav a {
   #about * {
     padding: 0 !important;
   }
-  #about h3 {
-    font-size: 30px !important;
-    margin: 60px 0 !important;
-  }
   #about img {
     -o-object-fit: contain;
        object-fit: contain;
     width: 80vw;
+    margin: 0 0 60px 0 !important;
   }
   #about .container {
     flex-direction: column !important;
@@ -223,21 +229,28 @@ header nav a {
     max-height: none !important;
   }
   #about .btn-container {
-    padding-top: 0 !important;
-    width: 100vw !important;
+    padding-bottom: 30px !important;
+    width: 80vw;
+    justify-content: center;
     flex-direction: row;
     flex-wrap: wrap;
-    gap: 3px !important;
-    justify-content: space-evenly;
+    gap: 10px !important;
   }
   #about .button {
     margin: 0 !important;
     padding: 8px 16px !important;
-    font-size: 16px;
+    font-size: 20px;
     font-family: "Raleway";
-    outline: none;
-    background-color: #212121;
+    font-weight: normal;
+    background-color: #474747;
     color: white;
+    flex: 1 1;
+    width: 100%;
+    white-space: nowrap;
+    text-align: center;
+  }
+  #about .button:last-child {
+    background-color: #AF8738;
   }
   #about .right-side {
     max-width: 100% !important;
@@ -461,7 +474,8 @@ h2 {
           text-decoration-color: #AF8738;
 }
 
-h2, h3 {
+h2,
+h3 {
   margin-bottom: 40px !important;
 }
 
@@ -505,6 +519,10 @@ ul {
   flex-direction: column;
 }
 
+#title {
+  display: none;
+}
+
 .row {
   display: flex;
   flex-direction: row;
@@ -512,7 +530,7 @@ ul {
 
 .button {
   padding: 8px 16px !important;
-  outline: 1px solid #525252;
+  font-family: "Abhaya";
   color: #212121;
 }
 
@@ -591,6 +609,12 @@ main {
 @media only screen and (max-width: 1900px) {
   body {
     overflow-x: hidden !important;
+  }
+  #title {
+    display: block;
+  }
+  #logo {
+    display: none;
   }
   .row {
     flex-direction: column;
