--- a/style.scss
+++ b/style.scss
@@ -31,31 +31,32 @@ a {
   text-decoration: none;
   color: #212121;
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 p {
-    font-family: Raleway;
-    font-size: 22px;
-    font-weight: 400;
-    line-height: 1.8;
-    letter-spacing: 0.05em;
-    text-align: justify;
+  font-family: Raleway;
+  font-size: 22px;
+  font-weight: 400;
+  line-height: 1.8;
+  letter-spacing: 0.05em;
+  text-align: justify;
 
 }
 
 h2 {
-    color: #212121;
-    text-transform: capitalize;
-    text-decoration: underline;
-    text-underline-offset: 5px;
-    text-decoration-thickness: 2px;
-    text-decoration-color: #AF8738;
+  color: #212121;
+  text-transform: capitalize;
+  text-decoration: underline;
+  text-underline-offset: 5px;
+  text-decoration-thickness: 2px;
+  text-decoration-color: #AF8738;
 }
 
-h2,h3 {
+h2,
+h3 {
   margin-bottom: 40px !important;
 }
 
@@ -66,18 +67,18 @@ h3 {
 }
 
 .selected {
-    &::before{
-        transform: scaleX(1) !important;
-        background-color: #AF8738 !important;
-    }
+  &::before {
+    transform: scaleX(1) !important;
+    background-color: #AF8738 !important;
+  }
 
-    &:hover::before {
-        opacity: 0;
-    }
+  &:hover::before {
+    opacity: 0;
+  }
 }
 
 ul {
-    list-style-type: none;
+  list-style-type: none;
 }
 
 .nav-link::before {
@@ -91,24 +92,29 @@ ul {
   transform: scaleX(0);
   transition: opacity .4s ease-in-out, transform .4s ease;
 }
+
 .nav-link:hover::before {
   transform-origin: 0 0;
   transform: scaleX(100%);
 }
 
 .col {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+}
+
+#title {
+  display: none;
 }
 
 .row {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 .button {
   padding: 8px 16px !important;
-  outline: 1px solid #525252;
+  font-family: "Abhaya";
   color: #212121;
 }
 
@@ -136,7 +142,7 @@ ul {
   }
 }
 
-#menu-btn{
+#menu-btn {
   display: none;
   outline: none;
   border: none;
@@ -173,17 +179,18 @@ ul {
 }
 
 #menu-btn.active {
-  span:nth-child(1){
+  span:nth-child(1) {
     transform: translateY(0) rotateZ(135deg) !important;
     transform-origin: center;
   }
 
-  span:nth-child(2){
+  span:nth-child(2) {
     transition: opacity 0s ease-out;
     opacity: 0;
     margin: 0 !important;
   }
-  span:nth-child(3){
+
+  span:nth-child(3) {
     transform: translateY(0) rotateZ(-135deg) !important;
     transform-origin: center;
   }
@@ -197,6 +204,14 @@ main {
 @media only screen and (max-width: 1900px) {
   body {
     overflow-x: hidden !important;
+  }
+
+  #title {
+    display: block;
+  }
+
+  #logo {
+    display: none;
   }
 
 
@@ -227,12 +242,13 @@ main {
 }
 
 @media only screen and (min-width: 1900px) {
-  #about{
-    img{
+  #about {
+    img {
       object-fit: cover !important;
     }
   }
-  p{
+
+  p {
     width: auto !important;
   }
 }
