--- a/_header.scss
+++ b/_header.scss
@@ -105,7 +105,7 @@ header {
         #title {
             font-size: 30px !important;
             margin: 0 !important;
-            font-size: 12vw !important;
+            font-size: 2em !important;
         }
 
         #header-bottom-mobile {
