--- a/_gallery.scss
+++ b/_gallery.scss
@@ -1,6 +1,5 @@
 #gallery {
 
-  // background-color: rgb(248, 248, 248);
   background-color: rgb(250, 250, 250);
 
     .container {
@@ -48,18 +47,18 @@
     #gallery {
       padding-top: 20px !important;
       ul {
-        flex-wrap: nowrap;
+        flex-wrap: wrap;
         flex-direction: row !important;
         overflow-x: scroll;
       }
 
       li {
         height: auto;
-        width: 100%;
+        flex: 1 1 33.333333%;
       }
 
       img {
-        width: 200px;
+        width: 100%;
         max-height: none 50vh !important;
         min-width: 0;
       }
