--- a/css/mon-histoire.css
+++ b/css/mon-histoire.css
@@ -33,7 +33,7 @@ h2 {
     padding: 10px 20px;
     margin: 0 !important;
     margin-top: 30px !important;
-    font-family: "Raleway";
+    font-family: "open sans";
     font-weight: lighter;
     width: fit-content;
     transition: all 200ms ease-in-out;
