--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -4,7 +4,8 @@ header {
 
     position: relative;
 
-    background-image: url("../assets/images/background.jpg");
+    // background-image: url("../assets/images/background.jpg");
+    background-image: url("https://images.unsplash.com/photo-1601934025804-c631e2777f26?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1740&q=80");
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -105,7 +106,7 @@ header {
         #title {
             font-size: 30px !important;
             margin: 0 !important;
-            font-size: 2em !important;
+            font-size: 1.8em !important;
         }
 
         #header-bottom-mobile {
