--- a/scss/_contact.scss
+++ b/scss/_contact.scss
@@ -10,7 +10,7 @@
     width: 100%;
     height: 100vh;
 
-    background-image: url("../assets/images/contact-bg.jpg");
+    background-image: url("../assets/images/contact-bg.webp");
     background-repeat: no-repeat;
     background-size: cover;
     background-position: left;
