--- a/css/style.css
+++ b/css/style.css
@@ -357,7 +357,7 @@ header nav a {
   margin-top: 100px !important;
   width: 100%;
   height: 100vh;
-  background-image: url("../assets/images/contact-bg.jpg");
+  background-image: url("../assets/images/contact-bg.webp");
   background-repeat: no-repeat;
   background-size: cover;
   background-position: left;
@@ -476,7 +476,7 @@ header nav a {
   opacity: 1;
 }
 #cards .tar-card .image-container {
-  width: 500px;
+  max-width: 500px;
   height: 80vh;
   max-height: 800px;
 }
@@ -493,7 +493,7 @@ header nav a {
   background-color: rgba(255, 255, 255, 0.95);
   display: flex;
   flex-direction: column;
-  padding: 50px;
+  padding: 30px !important;
   transition: all 0.3s ease-in-out;
 }
 #cards .tar-card .content .button {
@@ -542,15 +542,26 @@ header nav a {
      object-fit: cover;
 }
 
-@media only screen and (max-width: 1900px) {
+@media only screen and (min-width: 800px) {
+  .tar-card {
+    max-width: 50vh;
+  }
+  .card-wrapper {
+    flex-direction: row !important;
+  }
+}
+@media only screen and (max-width: 1000px) {
   #cards .button {
     font-size: 0.7em !important;
   }
   #cards .right-side {
     padding: 0 10px !important;
   }
+  #cards .row {
+    justify-content: center;
+  }
   #cards .card-wrapper {
-    flex-direction: column !important;
+    flex-direction: column;
     gap: 80px;
   }
   #cards h2 {
