--- a/css/tarifs.css
+++ b/css/tarifs.css
@@ -76,7 +76,7 @@ main {
     position: absolute;
     z-index: 999;
     bottom: 20px;
-    left: 20px;
+    left: 10px;
     transform: translateX(-50%);
     opacity: 0;
     transition: opacity .1s ease-in-out, transform 400ms ease-in-out !important;
@@ -84,7 +84,7 @@ main {
     font-weight: bolder;
     letter-spacing: 2px;
     text-transform: uppercase;
-    font-size: 18px;
+    font-size: 14px;
 }
 
 .card:hover > .title {
@@ -157,7 +157,7 @@ main {
         font-weight: bolder;
         letter-spacing: 2px;
         text-transform: uppercase;
-        font-size: 18px;
+        font-size: 14px !important;
         background-color: rgba(255, 255, 255, 0.8);
     }
 
