--- a/style.scss
+++ b/style.scss
@@ -10,7 +10,7 @@
 }
 html {
   box-sizing: border-box;
-  scroll-behavior: smooth;
+  // scroll-behavior: smooth;
   overflow-x: hidden;
   -webkit-tap-highlight-color: transparent;
 }
