--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -154,6 +154,8 @@ header {
             height: 100vh;
             width: 400px;
 
+            gap: 3vh !important;
+
             position: fixed;
             background-color: white;
             top: 0;
